# mdxify

./: .gitignore  .pre-commit-config.yaml  ADOPTION_GUIDE.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PERFORMANCE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  integration-tests.yaml
docs/: docs.json  introduction.mdx  mdxify-api.mdx  mdxify-cli.mdx  mdxify-discovery.mdx  mdxify-formatter.mdx  mdxify-generator.mdx  mdxify-navigation.mdx  mdxify-renderers.mdx  mdxify-source_links.mdx  quickstart.mdx
docs/python-sdk/: mdxify-cli.mdx  mdxify-discovery.mdx  mdxify-formatter.mdx  mdxify-generator.mdx  mdxify-navigation.mdx  mdxify-parser.mdx  mdxify-renderers.mdx  mdxify-source_links.mdx
repros/: 20.py
src/mdxify/: __init__.py  __main__.py  _version.py  api.py  cli.py  discovery.py  formatter.py  generator.py  navigation.py  parser.py  renderers.py  source_links.py
tests/: __init__.py  test_benchmark.py  test_cli.py  test_discovery.py  test_end_to_end.py  test_formatter.py  test_generator.py  test_integration.py  test_navigation.py  test_navigation_groups.py  test_parser.py  test_source_links.py  test_stale_cleanup.py
